fix: data explorer header has too much height

--- a/src/shared/molecules/DataExplorerGraphFlowMolecules/styles.scss
+++ b/src/shared/molecules/DataExplorerGraphFlowMolecules/styles.scss
@@ -1,5 +1,3 @@
-
-
 .navigation-stack-item {
   display: flex;
   align-items: flex-start;
@@ -44,7 +42,6 @@
     }
 
     .title {
-      font-family: 'Titillium Web';
       font-style: normal;
       font-weight: 600;
       font-size: 12px;
@@ -68,7 +65,6 @@
     }
 
     .types {
-      font-family: 'Titillium Web';
       font-style: normal;
       font-weight: 300;
       font-size: 12px;
