--- a/src/subapps/dataExplorer/styles.scss
+++ b/src/subapps/dataExplorer/styles.scss
@@ -290,10 +290,10 @@ td.ant-table-cell.data-explorer-column {
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
-    line-height: 130%;
+    line-height: 110%;
     letter-spacing: 0.04em;
     color: #8c8c8c;
-    height: 52px;
+    height: 32px;
     min-width: 72px;
     max-width: fit-content;
     box-sizing: content-box !important;
